--- a/design.css
+++ b/design.css
@@ -1,6 +1,20 @@
 @import url('https://fonts.cdnfonts.com/css/garet');
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@600;700&display=swap');
 
+.logo {padding: 5px; margin-left: 30px;}
+
+::-webkit-scrollbar{
+   width: 15px;
+}
+
+::-webkit-scrollbar-track{
+        background: #333;
+}
+
+::-webkit-scrollbar-thumb{
+        background-color: #DDC571;
+}
+
 * { margin: 0; padding: 0; }
 header {background-color: #6a663f; 
         background-repeat: no-repeat; 
@@ -10,12 +24,12 @@ img {width: 120px; height: auto;}
 
 div header {overflow: hidden; 
             position: relative;
-	          padding-right: 30px; 
+	          padding-right: 50px; 
             padding-left: 80px;}
 
 .Link, .Link-Home {float: right; color: white; font-size: 20px; 
-        font-family: 'Garet', sans-serif; padding-right: 25px;  
-        padding-left: 25px; padding-top: 15px; 
+        font-family: 'Garet', sans-serif; padding-right:30px;  
+        padding-left: 25px; padding-top: 25px; 
         text-decoration: none; 
         -moz-transition: all 0.2s ease-in; 
         -o-transition: all 0.2s ease-in; 
@@ -31,16 +45,20 @@ div header {overflow: hidden;
             -webkit-transition: all 0.2s ease-in; 
             transition: all 0.2s ease-in;}
 
+
 * {box-sizing: border-box;}
 
-.intro {background-image: url(images/header.png); width: auto; height: 660px;
+.intro, .intro-proj  {background-image: url(images/franci-bg3.png); width: auto; height: 660px;
         padding-top: 130px; background-repeat: no-repeat; background-size: cover;}
+.intro-proj {background-image: url(images/franci-bg3.png); width: auto; height: auto;
+        padding-top: 130px; background-repeat: no-repeat; background-size: cover;}
+
 
 @keyframes backText {
             100% {background-position: 2000px 0;}
         }
 
-.intro h1 {font-size: 120px; font-family: 'League Spartan', sans-serif; 
+.intro h1, .intro-proj h1 {font-size: 120px; font-family: 'League Spartan', sans-serif; 
         color: transparent; text-align: center; background: url(images/back-1.png);
         -webkit-text-stroke: 1px white; -webkit-background-clip: text;
         background-position: 0 0;
@@ -48,7 +66,8 @@ div header {overflow: hidden;
 
 .name {color:#DDC571;}
 .desc {color: white; padding: 40px 400px 0px 400px;}
-.name, .desc {text-align: center; font-family: 'Garet', sans-serif;}
+.name, .desc, .proj-desc {text-align: center; font-family: 'Garet', sans-serif;}
+.proj-desc{ color: wheat; padding: 10px 200px 0px 200px }
 
 .detail-box {background-image: url(images/bg-1.png); width: auto; height: 660px;
     padding-top: 30px; background-repeat: no-repeat; background-size: cover;}
@@ -89,12 +108,12 @@ div header {overflow: hidden;
 
 .view-work-btn:hover{color: var(--white); background-color:  #202020; transition: all ease 0.3s;}
 
-.projects{padding: 15px 9%; padding-bottom: 100px; font-family: 'League Spartan', sans-serif; background-image: url(images/header.png); }
-.projects .heading{text-align: center; padding-bottom: 15px; color: white;
-                    text-shadow: 0 5px 10px rgba(0, 0, 0,.2); font-size: 50px;}
-.projects .proj-desc{text-align: center; padding: 5px 100px 40px 100px; color: white; font-family: 'Garet', sans-serif;}
-.projects .box-container{display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 20px;}
-.projects .box-container .box{
+.projects{padding: 15px 9%; padding-bottom: 100px; font-family: 'League Spartan', sans-serif;  }
+.projects .heading {text-align: center; padding-bottom: 15px; color: #DDC571; padding: 45px 0px 15px 0px;
+                    text-shadow: 0 5px 10px rgba(0, 0, 0,.2); font-size: 50px; width: auto; }
+.projects .proj-desc, intro .proj-desc{text-align: center; padding: 15px 100px 40px 100px; color: white; font-family: 'Garet', sans-serif;}
+.projects .box-container {display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 30px;}
+.projects .box-container .box, .projects .box-container .box-p{
         box-shadow: 0 5px 10px rgba(0, 0, 0,.2); border-radius: 5px;
         background: white; text-align: center; padding: 30px 20px;}
 
@@ -102,6 +121,12 @@ div header {overflow: hidden;
 .projects .box-container .box h1{height: 80px; color: #6a663f; font-size: 35px; padding: 10px 0;}
 .projects .box-container .box p{height: 80px; color: black; font-size: 13px; font-family: 'Garet', sans-serif; padding-top: -20px;}
 .projects .box-container .box .btn{margin-top: 10px; display: inline-block; background: #535353; 
+color: white; font-size: 17px; border-radius: 5px; padding: 8px 25px;}
+
+.projects .box-container .box-p img{height: auto; width: 285px;}
+.projects .box-container .box-p h1{height: 80px; color: #6a663f; font-size: 35px; padding: 10px 0;}
+.projects .box-container .box-p p{height: 80px; color: black; font-size: 13px; font-family: 'Garet', sans-serif; padding-top: -20px;}
+.projects .box-container .box-p .btn{margin-top: 10px; display: inline-block; background: #535353; 
 color: white; font-size: 17px; border-radius: 5px; padding: 8px 25px;}
 
 .projects .box-container .box .btn:hover{box-shadow: 0 10px 15px rgba(0, 0, 0,.2); transform: scale(1.03);}
